--- a/bmq-examples/pom.xml
+++ b/bmq-examples/pom.xml
@@ -18,12 +18,12 @@ limitations under the License. -->
   <parent>
     <groupId>com.bloomberg.bmq</groupId>
     <artifactId>bmq-sdk-java</artifactId>
-    <version>0.0.10-SNAPSHOT</version>
+    <version>0.0.10</version>
   </parent>
 
   <groupId>com.bloomberg.bmq</groupId>
   <artifactId>bmq-examples</artifactId>
-  <version>0.0.10-SNAPSHOT</version>
+  <version>0.0.10</version>
   <packaging>jar</packaging>
 
   <name>BlazingMQ Java SDK Examples</name>
