--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -25,8 +25,8 @@ jobs:
 
       - name: 'Set up GitHub credentials'
         run: |
-          git config --global user.email "opensource@bloomberg.net"
-          git config --global user.name "Bloomberg Open Source"
+          git config --global user.email "emalygin@bloomberg.net"
+          git config --global user.name "Evgeny Malygin"
 
       - name: 'Publish snapshot to OSSRH'
         run: mvn --batch-mode -Possrh -Darguments="-Dmaven.test.skip=true -Dspotbugs.skip=true -Dgpg.keyname=${{ secrets.GPG_KEY_ID }} -Dgpg.passphrase=${{ secrets.GPG_KEY_PASSPHRASE }}" release:prepare release:perform
