--- a/pom.xml
+++ b/pom.xml
@@ -51,8 +51,8 @@ limitations under the License. -->
   </modules>
 
   <scm>
-    <connection>scm:git:git://git@github.com:bloomberg/blazingmq-sdk-java.git</connection>
-    <developerConnection>scm:git:git://git@github.com:bloomberg/blazingmq-sdk-java.git</developerConnection>
+    <connection>scm:git:https://git@github.com:bloomberg/blazingmq-sdk-java.git</connection>
+    <developerConnection>scm:git:https://git@github.com:bloomberg/blazingmq-sdk-java.git</developerConnection>
     <tag>bmq-sdk-java-0.0.10</tag>
     <url>https://github.com/bloomberg/blazingmq-sdk-java</url>
   </scm>
